fix navbar collapse

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -165,11 +165,7 @@ select:focus {
   outline:none;
 }
 
-.navbar-lewagon {
 
-  justify-content: center;
-  background: white;
-}
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
@@ -186,9 +182,20 @@ select:focus {
 .navbar {
     //position: fixed;
     width: 100%;
-    top: -16px;
+    top: -50px;
     padding-top: 0;
     padding-bottom: 0;
+}
+.navbar-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0, 0.8)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+
+}
+
+.navbar-toggler.navbar-toggler {
+  border-color: none;
+}
+.navbar-toggler.navbar-toggler:focus {
+  outline: none;
 }
 .logo {
   padding-top: 0px;
@@ -653,6 +660,15 @@ background-position: center center;
   }
   .logo a {
     font-size: 72px;
+  }
+  .navbar-lewagon {
+
+  justify-content: center;
+
+
+  }
+  .navbar {
+    top: -16px;
   }
 }
 
